--- a/Strings/nl/Resources.resw
+++ b/Strings/nl/Resources.resw
@@ -959,6 +959,9 @@ Bouw uw portefeuille op door transacties toe te voegen via de knop 'Transactie T
   <data name="PieChartView_Narratives.Text" xml:space="preserve">
     <value>Narratief verdeling</value>
   </data>
+  <data name="dummy" xml:space="preserve">
+    <value>dummy</value>
+  </data>
   <data name="CoinDialog_Narrative.Header" xml:space="preserve">
     <value>Narratief</value>
   </data>
@@ -1234,5 +1237,20 @@ Bouw uw portefeuille op door transacties toe te voegen via de knop 'Transactie T
   </data>
   <data name="Messages_ScheduledTask_Title" xml:space="preserve">
     <value>Beheerdersrechten vereist </value>
+  </data>
+  <data name="PriceLevelsLV_EmaLevel.Text" xml:space="preserve">
+    <value>50 EMA</value>
+  </data>
+  <data name="PriceLevelsLV_DistanceToEmaLevel.Text" xml:space="preserve">
+    <value>Afstand</value>
+  </data>
+  <data name="HeatMapView_Ema_YAxisTitle" xml:space="preserve">
+    <value>Afstand tot 50 EMA [%]</value>
+  </data>
+  <data name="HeatMap_TeachEma.Title" xml:space="preserve">
+    <value>Nieuw: dagelijkse 50 EMA bubbles</value>
+  </data>
+  <data name="HeatMapType_Ema.Content" xml:space="preserve">
+    <value>dagelijkse 50 EMA</value>
   </data>
 </root>
