--- a/MultilingualResources/CryptoPortfolioTracker.nl.xlf
+++ b/MultilingualResources/CryptoPortfolioTracker.nl.xlf
@@ -1666,6 +1666,10 @@ Bouw uw portefeuille op door transacties toe te voegen via de knop 'Transactie T
           <source>daily 50 EMA</source>
           <target state="translated">dagelijkse 50 EMA</target>
         </trans-unit>
+        <trans-unit id="Messages_ScheduledTaskMod_Explainer" translate="yes" xml:space="preserve">
+          <source>The CryptoPortfolioTracker needs to modify the scheduled task that perform the daily update of the Market Charts. The application needs to run once as an administrator to modify the scheduled task. It will restart and prompt you to accept changes. </source>
+          <target state="translated">De CryptoPortfolioTracker moet de geplande taak voor de dagelijkse update van de marktgrafieken aanpassen. De applicatie moet één keer als beheerder worden uitgevoerd om de geplande taak te wijzigen. De applicatie wordt opnieuw opgestart en u wordt gevraagd de wijzigingen te accepteren.</target>
+        </trans-unit>
       </group>
     </body>
   </file>
