--- a/Strings/nl/Resources.resw
+++ b/Strings/nl/Resources.resw
@@ -1373,4 +1373,16 @@ Bouw uw portefeuille op door transacties toe te voegen via de knop 'Transactie T
   <data name="Messages_Authentication_Required" xml:space="preserve">
     <value>Authenticatie vereist</value>
   </data>
+  <data name="Messages_ScheduledTaskMod_Explainer" xml:space="preserve">
+    <value>De CryptoPortfolioTracker moet de geplande taak voor de dagelijkse update van de marktgrafieken aanpassen. De applicatie moet één keer als beheerder worden uitgevoerd om de geplande taak te wijzigen. De applicatie wordt opnieuw opgestart en u wordt gevraagd de wijzigingen te accepteren.</value>
+  </data>
+  <data name="Messages_WhatsNewFile_FailedMsg" xml:space="preserve">
+    <value>De online 'Wat is er nieuw'-pagina kan niet worden geopend in uw standaardbrowser.</value>
+  </data>
+  <data name="Messages_WhatsNewFile_FailedTitle" xml:space="preserve">
+    <value>Het openen van de online 'Wat is Nieuw' is mislukt.</value>
+  </data>
+  <data name="Navigation_WhatsNew.Content" xml:space="preserve">
+    <value>Wat is er nieuw</value>
+  </data>
 </root>
